--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,9 @@ bootWar {
 }
 
 dependencies {
+	//redis
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
