--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,12 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.5'
 	id 'io.spring.dependency-management' version '1.1.6'
-	id 'war'
+	// id 'war'
 }
 
 group = 'project'
 version = '0.0.1-SNAPSHOT'
-apply plugin: 'war'
+// apply plugin: 'war'
 
 java {
 	toolchain {
@@ -25,9 +25,14 @@ repositories {
 	mavenCentral()
 }
 
-bootWar {
+// bootWar {
+// 	mainClass = 'project.movie.MovieApplication'
+// 	archiveFileName = 'ROOT.war'
+// }
+
+bootJar {
 	mainClass = 'project.movie.MovieApplication'
-	archiveFileName = 'ROOT.war'
+	archiveFileName = 'app.jar'
 }
 
 dependencies {
